cmake_minimum_required(VERSION 3.9)
project(Data_Structures_and_Algorithms)

set(CMAKE_CXX_STANDARD 11)

add_executable(Data_Structures_and_Algorithms main.cpp "Data Structures/Arrays.cpp" "Data Structures/lib/Arrays.h" "Data Structures/lib/LinkedList.h" "Data Structures/LinkedList.cpp" "Data Structures/lib/Stack.h" "Data Structures/Stack.cpp" "Data Structures/lib/Queues.h" "Data Structures/Queues.cpp" "Data Structures/lib/BinaryTree.h" "Data Structures/BinaryTree.cpp")